# routes/contactRoutes.js
@@ -1,9 +1,11 @@
 const express=require('express');
 const router=express.Router();
-const {getContacts,getContact,createContact,updateContact,deleteContact}=require('../controllers/contactController');
+const {getContacts,getContact,createContact,updateContact,deleteContact,exportContacts}=require('../controllers/contactController');
 const validateToken = require('../middleware/validateTokenHandler');
 
 router.use(validateToken);
+
+router.get('/export',exportContacts);
 
 router.get('/',getContacts);
 
